--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -16,13 +16,14 @@
 
 .carousel-component .carousel-indicators .active { background-color: #005EB8; border: 1px solid #005EB8; }
 
-@media screen and (max-width: 991px) { .carousel-component-slide__image--mobile { min-height: 750px; }
+@media screen and (max-width: 767px) { .carousel-component-slide__image--mobile { min-height: 750px; }
   .carousel-indicators { bottom: 56px; } }
 
-@media screen and (min-width: 992px) { .carousel-component-slide__caption { top: 10%; }
+@media screen and (min-width: 768px) { .carousel-indicators { bottom: 20px; } }
+
+@media screen and (min-width: 1200px) { .carousel-component-slide__caption { top: 10%; }
   .carousel-component-slide__cta { margin-top: 60px; }
-  .carousel-component:hover .carousel-component__arrow { display: block; }
-  .carousel-component .carousel-indicators { bottom: 20px; } }
+  .carousel-component:hover .carousel-component__arrow { display: block; background-image: none; } }
 
 .eaton-landing-hero--single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
 
